# isehole

./: README.md  pyproject.toml  usecase.md
src/isehole/: ise_csv.j2  ise_html.j2  ise_markdown.j2  ise_mindmap.j2  isehole.py  script.py
