[tool.poetry]
name = "isehole"
version = "0.1.0"
description = "Business ready documents from Cisco Identity Services Engine"
authors = ["John Capobianco <ptcapo@gmail.com>"]
packages = [{ include = "isehole", from = "src"}]
readme = "README.md"

[tool.poetry.scripts]
aceye = "isehole.script:run"

[tool.poetry.dependencies]
python = "^3.8"
rich-click = "^1.6.0"
jinja2 = "^3.1.2"
pyyaml = "^6.0"
aiohttp = "^3.8.3"
aiofiles = "^22.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
